Cleaned code from compiler warning. No longer supporting Serializable for domain classes.